--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>&copy; 2025 Box Model Demo</p>
+    <p>Box Model Demo</p>
   </footer>
 </body>
 </html>
